--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -45,4 +45,12 @@
     <string name="TXT_CONFIRM_DELETE_D_DAY">Are you sure to delete this D-Day?</string>
     <string name="TXT_DELETED_SUCCESSFULLY">D-Day deleted successfully.</string>
     <string name="TXT_DELETE_ERROR">There was a problem while trying to delete D-Day\nPlease try again later.</string>
+    <string name="TXT_SETTINGS">Settings</string>
+    <string name="TXT_SIGN_OUT">Sign Out</string>
+    <string name="TXT_CONFIRM_SIGN_OUT">Are you sure to sign out of this account?</string>
+    <string name="TXT_SIGN_OUT_SUCCESS">Signed Out.\nWe will navigate to Sign In View.</string>
+    <string name="TXT_CANCEL_MEMBERSHIP">Cancel Memebrship</string>
+    <string name="TXT_CONFIRM_CANCEL_MEMBRSHIP">If you do this process, all data will be removed and cannot be recovered.\nWould you like to go on?</string>
+    <string name="TXT_CANCEL_MEMBERSHIP_SUCCESS">Your membership withdrawal has been completed.</string>
+    <string name="TXT_REQUEST_CANCEL_MEMBERSHIP">Request to us</string>
 </resources>
